# numeric-algebras

./: Cargo.toml
core/: Cargo.toml
core/src/: algebra_mapping.rs  check_num_parts.rs  check_parts.rs  field_algebras.rs  lib.rs  mapping_transform.rs  type_parts.rs  variant_algebras.rs
macros/: Cargo.toml
macros/src/: arithmetic.rs  def_binary_op_traits.rs  def_unary_op_traits.rs  lib.rs  marker.rs  scalar.rs  scalar_arithmetic.rs  scalar_assign.rs  scalar_marker.rs  sin_cos.rs  unary.rs  value.rs
macros/src/assign/: enum_traits.rs  mod.rs  struct_traits.rs
macros/src/binary/: enum_traits.rs  mod.rs  struct_traits.rs
macros/src/vector/: elements_product.rs  elements_sum.rs  euclidean_norm.rs  mod.rs  p_norm.rs
src/: derive.rs  lib.rs  partial_init_array.rs
src/algebras/: elementwise.rs  float.rs  float_math.rs  mod.rs  not_nan.rs  ordered_float.rs  parallel.rs
src/macros/: def_traits.rs  impl_traits.rs  mod.rs
src/traits/: acc.rs  convert.rs  mod.rs  ops.rs  sum.rs  unit_range.rs  values.rs  vector.rs
tests/: abss.rs  add_assigns.rs  addition_is_commutative.rs  adds.rs  aggregate.rs  arithmetic.rs  coss.rs  derive.rs  div_assigns.rs  divs.rs  e.rs  elements_product.rs  elements_sums.rs  euclidean_norms.rs  exps.rs  inf.rs  lns.rs  log_assigns.rs  logs.rs  mul_assigns.rs  muls.rs  multiplication_is_commutative.rs  nan.rs  negs.rs  one.rs  p_norms.rs  pi.rs  pow_assigns.rs  pows.rs  recips.rs  scalar_add_assigns.rs  scalar_adds.rs  scalar_arithmetic.rs  scalar_div_assigns.rs  scalar_divs.rs  scalar_log_assigns.rs  scalar_logs.rs  scalar_mul_assigns.rs  scalar_muls.rs  scalar_pow_assigns.rs  (+10 more)
tests/derive/: abss.rs  add_assigns.rs  addition_is_commutative.rs  adds.rs  aggregate.rs  coss.rs  div_assigns.rs  divs.rs  e.rs  exps.rs  inf.rs  lns.rs  log_assigns.rs  logs.rs  mul_assigns.rs  muls.rs  multiplication_is_commutative.rs  nan.rs  negs.rs  one.rs  pi.rs  pow_assigns.rs  pows.rs  recips.rs  scalar_add_assigns.rs  scalar_adds.rs  scalar_div_assigns.rs  scalar_divs.rs  scalar_log_assigns.rs  scalar_logs.rs  scalar_mul_assigns.rs  scalar_muls.rs  scalar_pow_assigns.rs  scalar_pows.rs  scalar_sub_assigns.rs  scalar_subs.rs  sin_coss.rs  sins.rs  sqrts.rs  sub_assigns.rs  (+3 more)
