workspace = { members = ["macros"] }
[package]
name = "numeric-algebras"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numeric-algebras-macros = {path = "macros"}
abstract-algebras = {path = "../abstract-algebras"}
forward-traits = {version = "3.0"}

proptest = {version = "1.4", optional = true}

[dev-dependencies]
proptest = {version = "1.4"}

[features]
proptest = ["dep:proptest"]
