workspace = { members = [ "core","macros"] }
[package]
name = "numeric-algebras"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numeric-algebras-core = {path = "core"}
numeric-algebras-macros = {path = "macros"}

abstract-algebras = {path = "../abstract-algebras"}
macrospace = {path = "../macrospace"}
macrospace-autotransform = {path = "../macrospace-autotransform"}

paste = {version = "1.0"}

ordered-float = {version = "5.1"}
proptest = {version = "1.4", optional = true}

[dev-dependencies]
proptest = {version = "1.4"}
trybuild = {version = "1.0"}
macrospace-autotransform = {path = "../macrospace-autotransform"}

[features]
proptest = ["dep:proptest"]
