[package]
name = "numeric-algebras-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numeric-algebras-core = {path = "../core"}

macrospace = {path = "../../macrospace"}
macrospace-autotransform = {path = "../../macrospace-autotransform"}

syn = {version = "2.0"}
quote = {version = "1.0"}
syn_derive = {version = "0.2"}
paste = {version = "1.0"}
proc-macro2 = {version = "1.0"}

[lib]
proc-macro = true
